{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 37,
  "lineage": "f8c61361-3fe0-1054-c969-c2d68f849202",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418026355:network-acl/acl-06321ccf6f52be9d9",
            "default_network_acl_id": "acl-06321ccf6f52be9d9",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06321ccf6f52be9d9",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "905418026355",
            "subnet_ids": [
              "subnet-00c1b6437321282c6",
              "subnet-031c90135ee9c4afc",
              "subnet-072afa5dfc06773e6",
              "subnet-0bb37e4dd5f6ac0b2",
              "subnet-0ccf1169cc0cd3814",
              "subnet-0f073f0382c58f48f"
            ],
            "tags": {
              "Name": "eks-hilltop-default",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop"
            },
            "tags_all": {
              "Name": "eks-hilltop-default",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop"
            },
            "vpc_id": "vpc-02232824e78de088e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418026355:route-table/rtb-0f4ee6efde1bf6e5d",
            "default_route_table_id": "rtb-0f4ee6efde1bf6e5d",
            "id": "rtb-0f4ee6efde1bf6e5d",
            "owner_id": "905418026355",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "eks-hilltop-default",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop"
            },
            "tags_all": {
              "Name": "eks-hilltop-default",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-02232824e78de088e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418026355:security-group/sg-0ddb28d9daa99a08c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0ddb28d9daa99a08c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "905418026355",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-hilltop-default",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop"
            },
            "tags_all": {
              "Name": "eks-hilltop-default",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop"
            },
            "vpc_id": "vpc-02232824e78de088e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07018414a61a4e54c",
            "arn": "arn:aws:ec2:us-west-2:905418026355:elastic-ip/eipalloc-07018414a61a4e54c",
            "domain": "vpc",
            "id": "eipalloc-07018414a61a4e54c",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-100-21-106-83.us-west-2.compute.amazonaws.com",
            "public_ip": "100.21.106.83",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-hilltop-us-west-2a",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop"
            },
            "tags_all": {
              "Name": "eks-hilltop-us-west-2a",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418026355:internet-gateway/igw-0d066475f7f7b3e15",
            "id": "igw-0d066475f7f7b3e15",
            "owner_id": "905418026355",
            "tags": {
              "Name": "eks-hilltop",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop"
            },
            "tags_all": {
              "Name": "eks-hilltop",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop"
            },
            "vpc_id": "vpc-02232824e78de088e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07018414a61a4e54c",
            "connectivity_type": "public",
            "id": "nat-0d9ba7d3e0fd79941",
            "subnet_id": "subnet-0bb37e4dd5f6ac0b2",
            "tags": {
              "Name": "eks-hilltop-us-west-2a",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop"
            },
            "tags_all": {
              "Name": "eks-hilltop-us-west-2a",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d066475f7f7b3e15",
            "id": "r-rtb-0f4ca920315b8ee0c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f4ca920315b8ee0c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418026355:route-table/rtb-08345dd79b7605919",
            "id": "rtb-08345dd79b7605919",
            "owner_id": "905418026355",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-hilltop-SubnetPrivate",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop"
            },
            "tags_all": {
              "Name": "eks-hilltop-SubnetPrivate",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop"
            },
            "timeouts": null,
            "vpc_id": "vpc-02232824e78de088e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418026355:route-table/rtb-0f4ca920315b8ee0c",
            "id": "rtb-0f4ca920315b8ee0c",
            "owner_id": "905418026355",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks-hilltop-SubnetPublic",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop"
            },
            "tags_all": {
              "Name": "eks-hilltop-SubnetPublic",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop"
            },
            "timeouts": null,
            "vpc_id": "vpc-02232824e78de088e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffc4318512cde279",
            "route_table_id": "rtb-08345dd79b7605919",
            "subnet_id": "subnet-031c90135ee9c4afc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af5ad88221722e74",
            "route_table_id": "rtb-08345dd79b7605919",
            "subnet_id": "subnet-0f073f0382c58f48f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02711b62edb8da672",
            "route_table_id": "rtb-08345dd79b7605919",
            "subnet_id": "subnet-0ccf1169cc0cd3814"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081dd4cac4986e603",
            "route_table_id": "rtb-0f4ca920315b8ee0c",
            "subnet_id": "subnet-0bb37e4dd5f6ac0b2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040649897696c4d44",
            "route_table_id": "rtb-0f4ca920315b8ee0c",
            "subnet_id": "subnet-00c1b6437321282c6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a5226847cf0689e",
            "route_table_id": "rtb-0f4ca920315b8ee0c",
            "subnet_id": "subnet-072afa5dfc06773e6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418026355:subnet/subnet-031c90135ee9c4afc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.42.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031c90135ee9c4afc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418026355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-hilltop-SubnetPrivate-us-west-2a",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop",
              "karpenter.sh/discovery": "eks-hilltop"
            },
            "tags_all": {
              "Name": "eks-hilltop-SubnetPrivate-us-west-2a",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop",
              "karpenter.sh/discovery": "eks-hilltop"
            },
            "vpc_id": "vpc-02232824e78de088e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418026355:subnet/subnet-0f073f0382c58f48f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.42.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f073f0382c58f48f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418026355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-hilltop-SubnetPrivate-us-west-2b",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop",
              "karpenter.sh/discovery": "eks-hilltop"
            },
            "tags_all": {
              "Name": "eks-hilltop-SubnetPrivate-us-west-2b",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop",
              "karpenter.sh/discovery": "eks-hilltop"
            },
            "vpc_id": "vpc-02232824e78de088e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418026355:subnet/subnet-0ccf1169cc0cd3814",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.42.160.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccf1169cc0cd3814",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418026355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-hilltop-SubnetPrivate-us-west-2c",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop",
              "karpenter.sh/discovery": "eks-hilltop"
            },
            "tags_all": {
              "Name": "eks-hilltop-SubnetPrivate-us-west-2c",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop",
              "karpenter.sh/discovery": "eks-hilltop"
            },
            "vpc_id": "vpc-02232824e78de088e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418026355:subnet/subnet-0bb37e4dd5f6ac0b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.42.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb37e4dd5f6ac0b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418026355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-hilltop-SubnetPublic-us-west-2a",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-hilltop-SubnetPublic-us-west-2a",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02232824e78de088e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418026355:subnet/subnet-00c1b6437321282c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.42.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c1b6437321282c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418026355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-hilltop-SubnetPublic-us-west-2b",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-hilltop-SubnetPublic-us-west-2b",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02232824e78de088e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418026355:subnet/subnet-072afa5dfc06773e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.42.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072afa5dfc06773e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418026355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-hilltop-SubnetPublic-us-west-2c",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-hilltop-SubnetPublic-us-west-2c",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02232824e78de088e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418026355:vpc/vpc-02232824e78de088e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.42.0.0/16",
            "default_network_acl_id": "acl-06321ccf6f52be9d9",
            "default_route_table_id": "rtb-0f4ee6efde1bf6e5d",
            "default_security_group_id": "sg-0ddb28d9daa99a08c",
            "dhcp_options_id": "dopt-04648a42289a87e4e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02232824e78de088e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f4ee6efde1bf6e5d",
            "owner_id": "905418026355",
            "tags": {
              "Name": "eks-hilltop",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop"
            },
            "tags_all": {
              "Name": "eks-hilltop",
              "created-by": "eks-hilltop",
              "env": "eks-hilltop"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}